00_backup/eksdev/core/kui-ncrm/kui-ncrm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kui-ncrm
  namespace: core
  labels:
    app: kui-ncrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kui-ncrm
  template:
    metadata:
      labels:
        app: kui-ncrm
      annotations:
        actuator.prometheus.io.path: /ncrmwebroot/actuator/prometheus
        actuator.prometheus.io.port: '8080'
        actuator.prometheus.io.scrape: 'true'
    spec:
      volumes:
      - hostPath:
          path: /home/ec2-user/logs/core/kui-ncrm-logs
        name: kui-ncrm-logs
      - emptyDir: {}
        name: agent-dir

      containers:
      - name: kui-ncrm
        image: >-
          857616209275.dkr.ecr.ap-northeast-2.amazonaws.com/core/kui-ncrm:eksdev
            #          resources:
            #            requests:
            #              cpu: "1"
            #              memory: "2.5Gi"
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /home/ec2-user/logs
          name: kui-ncrm-logs
        - mountPath: /scouter-agent
          name: agent-dir
        imagePullPolicy: Always
      nodeSelector:
        eks.amazonaws.com/nodegroup: sk-dev-eks-core-worker-node
      restartPolicy: Always
