00_backup/eksdev/core/kui-ncrm/kui-ncrm-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: kui-ncrm
  namespace: core
    #  annotations:
    #    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    #    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kui-ncrm
  type: ClusterIP
