00_backup/eksdev/core/kui-ncrm/kui-ncrm-svc-loadbalacer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kui-ncrm
  namespace: core
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"

spec:
  selector:
    app: kui-ncrm
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
